--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "firebase": "^10.14.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.48.2",
-    "zustand": "^4.4.7",
-    "firebase": "^10.7.1",
-    "react-firebase-hooks": "^5.1.1"
+    "react-router-dom": "^6.20.0",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -34,4 +34,3 @@
     "vite": "^5.0.8"
   }
 }
-
